--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@libsql/client": "^0.8.1",
+    "@prisma/adapter-libsql": "^6.3.1",
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
@@ -40,6 +42,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.3.0"
+    "prisma": "^6.3.0",
+    "turso": "^0.1.0"
   }
 }
