--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/src/server.js",
     "prisma:init": "prisma init",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate  dev --preview-feature"
+    "prisma:migrate": "prisma migrate  dev --preview-feature",
+    "clean:gts": "node src/scripts/cleanGts.ts"
   },
   "keywords": [],
   "author": "Joaquin",
