--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.4.1",
+    "socket.io": "^4.8.1",
     "turso": "^0.1.0"
   }
 }
